migrate component to tailwind v1

--- a/templates/form-3.html
+++ b/templates/form-3.html
@@ -19,24 +19,24 @@
                     </div>
                     <div class="form-signup-dig">
                             <div class="w-full max-w-xs">
-                                    <form class="max-w-md mb-4 form-input">
+                                    <form class="max-w-xl mb-4 form-input">
                                       <div class="mb-4">
-                                        <label class="block text-grey-darker text-sm font-bold mb-2" for="username">
+                                        <label class="block text-gray-800 text-sm font-bold mb-2" for="username">
                                           Username
                                         </label>
-                                        <input class="shadow appearance-none border rounded w-full h-12 py-2 px-3 text-grey-darker leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username">
+                                        <input class="shadow appearance-none border rounded w-full h-12 py-2 px-3 text-gray-800 leading-tight focus:outline-none focus:shadow-outline" id="username" type="text" placeholder="Username">
                                       </div>
                                       <div class="mb-4">
-                                        <label class="block text-grey-darker text-sm font-bold mb-2" for="password">
+                                        <label class="block text-gray-800 text-sm font-bold mb-2" for="password">
                                           Email
                                         </label>
-                                        <input class="shadow appearance-none border border rounded h-12 w-full py-2 px-3 text-grey-darker mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="email" placeholder="email">
+                                        <input class="shadow appearance-none border border rounded h-12 w-full py-2 px-3 text-gray-800 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="email" placeholder="email">
                                       </div>
                                       <div class="mb-6">
-                                            <label class="block text-grey-darker text-sm font-bold mb-2" for="password">
+                                            <label class="block text-gray-800 text-sm font-bold mb-2" for="password">
                                               Password
                                             </label>
-                                            <input class="shadow appearance-none border border rounded w-full h-12 py-2 px-3 text-grey-darker mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="******************">
+                                            <input class="shadow appearance-none border border rounded w-full h-12 py-2 px-3 text-gray-800 mb-3 leading-tight focus:outline-none focus:shadow-outline" id="password" type="password" placeholder="******************">
                                           </div>
                                       <div class="flex items-center justify-between">
                                         <button class="bg-black w-full hover:bg-black text-white py-3 px-4" type="button">
