--- a/templates/widget-1.html
+++ b/templates/widget-1.html
@@ -1,80 +1,80 @@
 <section class="bg-white py-4 font-sans">
-  <div class="container container max-w-xl m-auto flex flex-wrap flex-col md:flex-row items-center justify-start">
+  <div class="container container max-w-6xl m-auto flex flex-wrap flex-col md:flex-row items-center justify-start">
 
 <div class="w-full max-w-screen-xl mx-auto p-6">
-  <div class="relative rounded overflow-hidden border border-grey-light mb-8 bg-white">
-    <div class="border-b border-grey-light p-4 bg-grey-lighter py-8">
+  <div class="relative rounded overflow-hidden border border-gray-400 mb-8 bg-white">
+    <div class="border-b border-gray-400 p-4 bg-gray-200 py-8">
       <div class="bg-white mx-auto max-w-sm shadow-lg rounded-lg overflow-hidden">
         <div class="sm:flex sm:items-center px-2 py-4">
           <div class="flex-grow">
             <h3 class="font-normal px-2 py-3 leading-tight">Contacts</h3>
             <input type="text" placeholder="Search teams or members"
-              class="my-2 w-full text-sm bg-grey-light text-grey-darkest rounded h-10 p-3 focus:outline-none" />
+              class="my-2 w-full text-sm bg-gray-400 text-gray-900 rounded h-10 p-3 focus:outline-none" />
             <div class="w-full">
-              <div class="flex cursor-pointer my-1 hover:bg-blue-lightest rounded">
+              <div class="flex cursor-pointer my-1 hover:bg-blue-100 rounded">
                 <div class="w-8 h-10 text-center py-1">
-                  <p class="text-3xl p-0 text-green-dark">•</p>
+                  <p class="text-3xl p-0 text-green-700">•</p>
                 </div>
                 <div class="w-4/5 h-10 py-3 px-1">
-                  <p class="hover:text-blue-dark">Kevin Durant</p>
+                  <p class="hover:text-blue-700">Kevin Durant</p>
                 </div>
                 <div class="w-1/5 h-10 text-right p-3">
-                  <p class="text-sm text-grey-dark">Member</p>
+                  <p class="text-sm text-gray-700">Member</p>
                 </div>
               </div>
-              <div class="flex cursor-pointer my-1 hover:bg-blue-lightest rounded">
+              <div class="flex cursor-pointer my-1 hover:bg-blue-100 rounded">
                 <div class="w-8 h-10 text-center py-1">
-                  <p class="text-3xl p-0 text-grey-dark">•</p>
+                  <p class="text-3xl p-0 text-gray-700">•</p>
                 </div>
                 <div class="w-4/5 h-10 py-3 px-1">
-                  <p class="hover:text-blue-dark">James Harden</p>
+                  <p class="hover:text-blue-700">James Harden</p>
                 </div>
                 <div class="w-1/5 h-10 text-right p-3">
-                  <p class="text-sm text-grey-dark">Team</p>
+                  <p class="text-sm text-gray-700">Team</p>
                 </div>
               </div>
-              <div class="flex cursor-pointer my-1 hover:bg-blue-lightest rounded">
+              <div class="flex cursor-pointer my-1 hover:bg-blue-100 rounded">
                 <div class="w-8 h-10 text-center py-1">
-                  <p class="text-3xl p-0 text-green-dark">•</p>
+                  <p class="text-3xl p-0 text-green-700">•</p>
                 </div>
                 <div class="w-4/5 h-10 py-3 px-1">
-                  <p class="hover:text-blue-dark">Michael Jordan</p>
+                  <p class="hover:text-blue-700">Michael Jordan</p>
                 </div>
                 <div class="w-1/5 h-10 text-right p-3">
-                  <p class="text-sm text-grey-dark">Member</p>
+                  <p class="text-sm text-gray-700">Member</p>
                 </div>
               </div>
-              <div class="flex cursor-pointer my-1 hover:bg-blue-lightest rounded">
+              <div class="flex cursor-pointer my-1 hover:bg-blue-100 rounded">
                 <div class="w-8 h-10 text-center py-1">
-                  <p class="text-3xl p-0 text-grey-dark">•</p>
+                  <p class="text-3xl p-0 text-gray-700">•</p>
                 </div>
                 <div class="w-4/5 h-10 py-3 px-1">
-                  <p class="hover:text-blue-dark">Tim Duncan</p>
+                  <p class="hover:text-blue-700">Tim Duncan</p>
                 </div>
                 <div class="w-1/5 h-10 text-right p-3">
-                  <p class="text-sm text-grey-dark">Team</p>
+                  <p class="text-sm text-gray-700">Team</p>
                 </div>
               </div>
-              <div class="flex my-1 cursor-pointer hover:bg-blue-lightest rounded">
+              <div class="flex my-1 cursor-pointer hover:bg-blue-100 rounded">
                 <div class="w-8 h-10 text-center py-1">
-                  <p class="text-3xl p-0 text-grey-dark">•</p>
+                  <p class="text-3xl p-0 text-gray-700">•</p>
                 </div>
                 <div class="w-4/5  h-10 py-3 px-1">
-                  <p class="hover:text-blue-dark">Lebrão James</p>
+                  <p class="hover:text-blue-700">Lebrão James</p>
                 </div>
                 <div class="w-1/5 h-10 text-right p-3">
-                  <p class="text-sm text-grey-dark">Member</p>
+                  <p class="text-sm text-gray-700">Member</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="sm:flex bg-grey-light sm:items-center px-2 py-4">
+        <div class="sm:flex bg-gray-400 sm:items-center px-2 py-4">
           <div class="flex-grow text-right">
-            <button class="text-grey-darkest hover:text-grey-dark py-2 px-4 rounded">
+            <button class="text-gray-900 hover:text-gray-700 py-2 px-4 rounded">
               Cancel
             </button>
-            <button class="bg-blue hover:bg-blue-dark text-white py-2 px-4 rounded">
+            <button class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded">
               Invite
             </button>
           </div>
