--- a/templates/cards-1.html
+++ b/templates/cards-1.html
@@ -1,13 +1,13 @@
 <section class="bg-white py-4 font-sans">
-  <div class="container max-w-xl m-auto flex flex-wrap items-center justify-start">
+  <div class="container max-w-6xl m-auto flex flex-wrap items-center justify-start">
 
     <div class="w-full md:w-1/2 lg:w-1/3 flex flex-col mb-8 px-3">
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">Read More</span>
+            <span class="text-gray-700 text-sm">Read More</span>
           </p>
         </div>
       </div>
@@ -17,9 +17,9 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">Read More</span>
+            <span class="text-gray-700 text-sm">Read More</span>
           </p>
         </div>
       </div>
@@ -29,9 +29,9 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">Read More</span>
+            <span class="text-gray-700 text-sm">Read More</span>
           </p>
         </div>
       </div>
@@ -41,9 +41,9 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">Read More</span>
+            <span class="text-gray-700 text-sm">Read More</span>
           </p>
         </div>
       </div>
@@ -53,9 +53,9 @@
       <div class="overflow-hidden bg-white rounded-lg shadow hover:shadow-raised hover:translateY-2px transition">
         <img class="w-full" src="https://stitches-cdn.hyperyolo.com/demo-bg.png" alt="Sunset in the mountains">
         <div class="p-6 flex flex-col justify-between ">
-          <h3 class="font-medium text-grey-darkest mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
+          <h3 class="font-medium text-gray-900 mb-4 leading-normal">Desktop Publishing Software like Aldus PageMaker</h3>
           <p class="inline-flex items-center">
-            <span class="text-grey-dark text-sm">Read More</span>
+            <span class="text-gray-700 text-sm">Read More</span>
           </p>
         </div>
       </div>
