--- a/templates/footer-1.html
+++ b/templates/footer-1.html
@@ -4,36 +4,36 @@
       <img src="https://stitches-cdn.hyperyolo.com/logo-white.png" class="w-32" alt="logo">
     </a>
     <div class="w-1/2 flex text-sm mt-6 lg:mt-0">
-      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
-        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide">Product</li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Popular</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Trending</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Catalog</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Features</a></li>
+      <ul class="text-gray-700  font-thin flex flex-col text-left">
+        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wider">Product</li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Popular</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Trending</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Catalog</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Features</a></li>
       </ul>
-      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
-        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide">Company</li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Press Release</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Mission</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Strategy</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Works</a></li>
+      <ul class="text-gray-700  font-thin flex flex-col text-left">
+        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wider">Company</li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Press Release</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Mission</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Strategy</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Works</a></li>
       </ul>
-      <ul class="text-grey-dark list-reset font-thin flex flex-col text-left">
-        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wide">Info</li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Support</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Developers</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Customer Services</a></li>
-        <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Started Guide</a></li>
+      <ul class="text-gray-700  font-thin flex flex-col text-left">
+        <li class="inline-block py-2 px-3 text-white uppercase no-underline font-medium tracking-wider">Info</li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Support</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Developers</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Customer Services</a></li>
+        <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Started Guide</a></li>
       </ul>
-      <div class="text-grey-dark flex flex-col">
-        <div class="inline-block py-2 px-3 text-white uppercase font-medium tracking-wide">Follow Us</div>
+      <div class="text-gray-700 flex flex-col">
+        <div class="inline-block py-2 px-3 text-white uppercase font-medium tracking-wider">Follow Us</div>
         <div class="flex pl-4 justify-start">
-          <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
-          <a class="block flex items-center text-white hover:text-grey mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
-          <a class="block flex items-center text-white hover:text-grey no-underline" href="#"><i class="fab fa-twitter"></i></a>
+          <a class="block flex items-center text-white hover:text-gray-500 mr-6 no-underline" href="#"><i class="fab fa-github-alt"></i></a>
+          <a class="block flex items-center text-white hover:text-gray-500 mr-6 no-underline" href="#"><i class="fab fa-slack"></i></a>
+          <a class="block flex items-center text-white hover:text-gray-500 no-underline" href="#"><i class="fab fa-twitter"></i></a>
         </div>
       </div>
     </div>
   </div>
-  <div class="pt-4 mt-4 text-grey-darker border-t border-grey-darkest text-center"> ©2019 Hyperyolo. All rights reserved.</div>
+  <div class="pt-4 mt-4 text-gray-800 border-t border-gray-900 text-center"> ©2019 Hyperyolo. All rights reserved.</div>
 </footer>
