--- a/templates/footer-2.html
+++ b/templates/footer-2.html
@@ -1,14 +1,14 @@
 <footer class="font-sans bg-black text-white py-8 px-4">
-  <div class="mx-auto max-w-xl overflow-hidden flex justify-between items-center">
-    <ul class="text-sm text-grey-dark list-reset flex items-center">
+  <div class="mx-auto max-w-6xl overflow-hidden flex justify-between items-center">
+    <ul class="text-sm text-gray-700  flex items-center">
       <li> <a href="/" class="block mr-4 w-32">
       <img src="https://stitches-cdn.hyperyolo.com/logo-white.png" class="" alt="logo">
     </a></li>
-      <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Product</a></li>
-      <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">Company</a></li>
-      <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">FAQs</a></li>
-      <li><a href="#" class="inline-block py-2 px-3 text-grey hover:text-grey-light no-underline">About Us</a></li>
+      <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Product</a></li>
+      <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">Company</a></li>
+      <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">FAQs</a></li>
+      <li><a href="#" class="inline-block py-2 px-3 text-gray-500 hover:text-gray-400 no-underline">About Us</a></li>
     </ul>
-    <p class="inline-block py-2 px-3 text-grey-darker text-xs"> ©2019 Hyperyolo. All rights reserved.</p>
+    <p class="inline-block py-2 px-3 text-gray-800 text-xs"> ©2019 Hyperyolo. All rights reserved.</p>
   </div>
 </footer>
