--- a/templates/form-2.html
+++ b/templates/form-2.html
@@ -1,29 +1,29 @@
-<section class="bg-grey-lighter">
+<section class="bg-gray-200">
 
 <div class="min-h-screen mx-auto flex flex-col">
-            <div class="container max-w-md mx-auto my-8 flex-1 flex flex-col items-center justify-center px-2">
+            <div class="container max-w-xl mx-auto my-8 flex-1 flex flex-col items-center justify-center px-2">
                 <div class="bg-white px-6 py-8 rounded shadow-md text-black">
                     <h1 class="mb-8 text-3xl text-center">Sign up</h1>
                     <input 
                         type="text"
-                        class="block border border-grey-light w-full p-3 rounded mb-4"
+                        class="block border border-gray-400 w-full p-3 rounded mb-4"
                         name="fullname"
                         placeholder="Full Name" />
 
                     <input 
                         type="text"
-                        class="block border border-grey-light w-full p-3 rounded mb-4"
+                        class="block border border-gray-400 w-full p-3 rounded mb-4"
                         name="email"
                         placeholder="Email" />
 
                     <input 
                         type="password"
-                        class="block border border-grey-light w-full p-3 rounded mb-4"
+                        class="block border border-gray-400 w-full p-3 rounded mb-4"
                         name="password"
                         placeholder="Password" />
                     <input 
                         type="password"
-                        class="block border border-grey-light w-full p-3 rounded mb-4"
+                        class="block border border-gray-400 w-full p-3 rounded mb-4"
                         name="confirm_password"
                         placeholder="Confirm Password" />
 
@@ -32,20 +32,20 @@
     Sign In
     </button>                  
 
-                    <div class="text-center text-sm text-grey-dark mt-4">
+                    <div class="text-center text-sm text-gray-700 mt-4">
                         By signing up, you agree to the 
-                        <a class="no-underline border-b border-grey-dark text-grey-dark" href="#">
+                        <a class="no-underline border-b border-gray-700 text-gray-700" href="#">
                             Terms of Service
                         </a> and 
-                        <a class="no-underline border-b border-grey-dark text-grey-dark" href="#">
+                        <a class="no-underline border-b border-gray-700 text-gray-700" href="#">
                             Privacy Policy
                         </a>
                     </div>
                 </div>
 
-                <div class="text-grey-dark mt-6">
+                <div class="text-gray-700 mt-6">
                     Already have an account? 
-                    <a class="no-underline border-b border-blue text-blue" href="../login/">
+                    <a class="no-underline border-b border-blue-500 text-blue-500  href="../login/">
                         Log in
                     </a>.
                 </div>
