add several templates

--- a/templates/form-8.html
+++ b/templates/form-8.html
@@ -1,8 +1,8 @@
-<section class="bg-primary-std">
-
-    <div class="min-h-screen mx-auto flex flex-col">
+<div class="fixed left-0 top-0 w-full bg-black h-full overflow-auto hidden-x" style="background-color: rgba(0,0,0,0.8); z-index: 9 ">
+  
                 <div class="container max-w-xl mx-auto my-8 flex-1 flex flex-col items-center justify-center px-2">
                     <div class="bg-white px-6 py-8 rounded-lg shadow-lg text-black">
+                      		<i class="fa fa-window-close float-right hover:text-secondary-std cursor-pointer"></i>
                           <img src="http://127.0.0.1:8088/images/backer.png" class="w-20 mx-auto">
                         <h1 class="mb-8 text-3xl text-center">Sign up</h1>
                         <input 
@@ -51,5 +51,5 @@
                         </a>.
                     </div>
                 </div>
-            </div>
-    </section>
+  
+</div>
