--- a/input.css
+++ b/input.css
@@ -2,6 +2,10 @@
 
 @tailwind components;
 
+.btn {
+  @apply font-semibold py-2 px-4 rounded text-center cursor-pointer uppercase shadow-lg;
+}
+
 @tailwind utilities;
 
 
